# if_chatterbox

./: LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  tts.py  vc.py
example_workflows/: IF_Voice_Cloning_&_Text-to_Speech.json
models/t3/inference/: alignment_stream_analyzer.py
